# NAO-ALInfrrared-Module

./: README.md
documentacion/: propuesta.aux  propuesta.out  propuesta.tex
infra/: CMakeLists.txt  CMakeLists.txt~  infrarred.cpp  qiproject.xml
infra/build-infrarred/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
infra/build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dependencies.cmake
